# cuCALC

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
include/cucalc/: cucalc.h  cucalc_common.h  cucalc_derivative.h  cucalc_integration.h  gpuinfo.h
min_rep_ex/: build.sh  main  shared_dynamic.cu  shared_dynamic.h  shared_main.cu
src/: CMakeLists.txt  cucalc.cu
src/common/: cucalc_common.cu
src/derivative/: cucalc_derivative.cu
src/integration/: cucalc_integration.cu
src/misc/: cucalc_gpuinfo.cu  gpuinfo.cu
tests/: CMakeCache.txt  CMakeLists.txt
tests/basic/: main.cpp
tests/derivative/: test_cucalc_derivative.cu  test_cucalc_derivatives.cu
tests/integration/: test_cucalc_derivatives.cu  test_cucalc_integration.cu
tests/misc/: gpuinfo.cpp  test_gpuinfo.cpp
